✨ feat: 优化tsconfig之间关联

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["@Big-G/configs/tsconfig"],
+  "extends": "../../packages/configs/tsconfig.json",
   "compilerOptions": {
     "baseUrl": "./",
     "target": "es5",
