--- a/packages/configs/tsconfig.json
+++ b/packages/configs/tsconfig.json
@@ -1,1 +1,20 @@
-{ "extends": "./tsconfig.base.json", "include": ["tsconfig.base.json"] }
+{
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "target": "ES2022",
+    "module": "commonjs",
+    "strict": false,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "composite": true,
+    "outDir": "./dist",
+    "rootDir": ".",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "lib": ["ES2022", "dom", "decorators"],
+    "paths": {
+      "@Big-G/*": ["../*"]
+    }
+  }
+}
