--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,8 +1,7 @@
 {
-  "extends": "../configs/tsconfig.base.json",
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "es2017", // 目标ECMAScript版本（覆盖基础配置）
-    "module": "commonjs", // 模块系统格式（覆盖基础配置）
+    "module": "commonjs", // 模块系统格式
     "declaration": true, // 生成类型声明文件(.d.ts)
     "outDir": "./dist", // 编译输出目录
     "composite": true, // 启用复合项目模式(monorepo支持)
