✨ feat: backend项目也继承根目录tsconfig

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,25 +1,25 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "resolvePackageJsonExports": true,
-    "esModuleInterop": true,
-    "isolatedModules": true,
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "ES2023",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": true,
-    "forceConsistentCasingInFileNames": true,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "noFallthroughCasesInSwitch": false
-  }
+    "module": "nodenext", // 指定生成哪个模块系统代码
+    "moduleResolution": "nodenext", // 模块解析策略，使用Node.js的模块解析策略
+    "declaration": true, // 生成相应的'.d.ts'声明文件
+    "removeComments": true, // 从输出文件中删除所有注释
+    "emitDecoratorMetadata": true, // 为装饰器提供元数据支持
+    "experimentalDecorators": true, // 启用实验性的装饰器支持
+    "allowSyntheticDefaultImports": true, // 允许默认导入从没有设置默认导出的模块
+    "target": "ES5", // 指定ECMAScript目标版本
+    "sourceMap": true, // 生成相应的 '.map' 文件
+    "outDir": "./dist", // 指定输出目录
+    "baseUrl": "./", // 解析非相对模块名的基准目录
+    "incremental": true, // 启用增量编译
+    "composite": false, // 启用复合项目模式
+    "skipLibCheck": true, // 跳过库文件的类型检查
+    "strictNullChecks": false, // 在严格的null检查模式下编译
+    "noImplicitAny": false, // 在表达式和声明上有隐含的'any'类型时报错
+    "strictBindCallApply": false, // 在函数绑定、调用和应用时使用严格的类型检查
+    "forceConsistentCasingInFileNames": false, // 禁止对同一个文件的不一致的大小写引用
+    "noFallthroughCasesInSwitch": false // 报告switch语句的case落空错误
+  },
+  "include": ["src/**/*"]
 }
