🎉 init: 项目初始化依赖按照

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,11 +28,14 @@
     "@eslint/js": "catalog:",
     "@nestjs/cli": "catalog:",
     "@nestjs/schematics": "catalog:",
+    "@nestjs/swagger": "catalog:",
     "@nestjs/testing": "catalog:",
     "@types/express": "catalog:",
     "@types/jest": "catalog:",
     "@types/node": "catalog:",
     "@types/supertest": "catalog:",
+    "class-transformer": "catalog:",
+    "class-validator": "catalog:",
     "eslint": "catalog:",
     "eslint-config-prettier": "catalog:",
     "eslint-plugin-prettier": "catalog:",
