--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "lib": ["ES2022", "dom", "decorators"], // 包含的库文件，支持ES2022、DOM API和装饰器
     
     // 模块解析
-    // "baseUrl": ".", // 基础路径，用于解析非相对模块名
+    "baseUrl": ".", // 基础路径，用于解析非相对模块名
     "paths": {
       "@Big-G/*": ["packages/*"] // 路径映射，简化@Big-G包的导入
     },
