--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
-      "eslint --config eslint.config.mjs --fix",
+      "eslint --fix",
       "prettier --write"
     ],
     "*.{json,md}": [
