--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "moge-frontend",
+  "name": "@moge/frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "@Big-G/types": "workspace:*",
-    "@Big-G/configs": "workspace:*",
+    "@moge/types": "workspace:*",
+    "@moge/configs": "workspace:*",
     "next": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@Big-G/configs": "workspace:*",
+    "@moge/configs": "workspace:*",
     "@eslint/eslintrc": "catalog:",
     "@tailwindcss/postcss": "catalog:",
     "@types/node": "catalog:",
