--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@Big-G/configs",
+  "name": "@moge/configs",
   "version": "1.0.0",
   "description": "Shared configurations for monorepo",
   "main": "index.js",
