🐞 fix: 修复nextjs启动后报错问题,只配置一个eslint.config

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@moge/configs": "workspace:*",
+    "@moge/types": "workspace:*",
     "@nestjs/common": "catalog:",
     "@nestjs/core": "catalog:",
     "@nestjs/platform-express": "catalog:",
