--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,21 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@moge/types": "workspace:*",
     "@moge/configs": "workspace:*",
+    "@moge/types": "workspace:*",
     "next": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:"
   },
   "devDependencies": {
-    "@moge/configs": "workspace:*",
     "@eslint/eslintrc": "catalog:",
+    "@moge/configs": "workspace:*",
     "@tailwindcss/postcss": "catalog:",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "eslint": "catalog:",
     "eslint-config-next": "catalog:",
+    "postcss": "catalog:",
     "tailwindcss": "catalog:"
   }
 }
