--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,8 @@ catalogs:
   default:
     '@changesets/changelog-github': ^0.5.0
     '@changesets/cli': 2.29.6
+    '@commitlint/cli': ^19.8.1
+    '@commitlint/config-conventional': ^19.8.1
     '@eslint/eslintrc': ^3.1.0
     '@eslint/js': ^9.13.0
     '@nestjs/cli': ^10.4.5
@@ -13,8 +15,9 @@ catalogs:
     '@nestjs/core': ^10.4.5
     '@nestjs/platform-express': ^10.4.5
     '@nestjs/schematics': ^10.0.0
+    '@nestjs/swagger': ^11.2.0
     '@nestjs/testing': ^10.4.5
-    '@tailwindcss/postcss': ^4
+    '@tailwindcss/postcss': 4.1.12
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
     '@types/node': 18.18.0
@@ -24,13 +27,10 @@ catalogs:
     '@typescript-eslint/eslint-plugin': ^7.0.0
     '@typescript-eslint/parser': ^7.0.0
     '@typescript-eslint/typescript-estree': ^7.0.0
-    '@commitlint/cli': ^19.8.1
-    '@commitlint/config-conventional': ^19.8.1
-    '@nestjs/swagger': ^11.2.0
     axios: ^1.6.0
-    husky: '^9.1.7'
-    lint-staged: '^16.1.5'
     chokidar: ^4.0.0
+    class-transformer: ^0.5.1
+    class-validator: ^0.14.2
     concurrently: ^8.2.2
     dayjs: ^1.11.10
     eslint: 8.57.1
@@ -38,8 +38,10 @@ catalogs:
     eslint-config-prettier: 9.1.2
     eslint-plugin-prettier: 5.5.4
     globals: ^16.0.0
+    husky: ^9.1.7
     inquirer: ^9.2.0
     jest: ^29.7.0
+    lint-staged: ^16.1.5
     next: ^14.2.4
     prettier: 3.6.2
     react: ^18.3.1
@@ -48,11 +50,10 @@ catalogs:
     rxjs: ^7.8.1
     source-map-support: ^0.5.21
     supertest: ^7.0.0
-    tailwindcss: ^3.4.1
+    tailwindcss: ^4.1.12
+    postcss: ^8.5.6
     ts-jest: ^29.4.1
     ts-loader: ^9.5.1
     ts-node: ^10.9.2
     tsconfig-paths: ^4.2.0
     typescript: 5.3.3
-    class-transformer: ^0.5.1
-    class-validator: ^0.14.2
