✨ feat: 后端添加ORM prisma,完善README.md

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -43,6 +43,7 @@
     "globals": "catalog:",
     "jest": "catalog:",
     "prettier": "catalog:",
+    "prisma": "catalog:",
     "source-map-support": "catalog:",
     "supertest": "catalog:",
     "ts-jest": "catalog:",
