--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -27,8 +27,6 @@ catalogs:
     '@typescript-eslint/eslint-plugin': ^7.0.0
     '@typescript-eslint/parser': ^7.0.0
     '@typescript-eslint/typescript-estree': ^7.0.0
-    'typescript-eslint': ^7.0.0
-    axios: ^1.6.0
     chokidar: ^4.0.0
     class-transformer: ^0.5.1
     class-validator: ^0.14.2
@@ -44,7 +42,9 @@ catalogs:
     jest: ^29.7.0
     lint-staged: ^16.1.5
     next: ^14.2.4
+    postcss: ^8.5.6
     prettier: 3.6.2
+    prisma: 6.15.0
     react: ^18.3.1
     react-dom: ^18.3.1
     reflect-metadata: ^0.2.2
@@ -52,9 +52,9 @@ catalogs:
     source-map-support: ^0.5.21
     supertest: ^7.0.0
     tailwindcss: ^4.1.12
-    postcss: ^8.5.6
     ts-jest: ^29.4.1
     ts-loader: ^9.5.1
     ts-node: ^10.9.2
     tsconfig-paths: ^4.2.0
     typescript: 5.3.3
+    typescript-eslint: ^8.4.2
