✨ feat: 添加依赖@prisma/client

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
     "@nestjs/common": "catalog:",
     "@nestjs/core": "catalog:",
     "@nestjs/platform-express": "catalog:",
+    "@prisma/client": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:"
   },
