--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -43,6 +43,7 @@ catalogs:
     jest: ^29.7.0
     lint-staged: ^16.1.5
     next: ^14.2.4
+    next-auth: 4.24.11
     postcss: ^8.5.6
     prettier: 3.6.2
     prisma: 6.15.0
