--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -28,6 +28,8 @@ catalogs:
     '@typescript-eslint/eslint-plugin': ^7.0.0
     '@typescript-eslint/parser': ^7.0.0
     '@typescript-eslint/typescript-estree': ^7.0.0
+    '@radix-ui/react-label': '^2.1.7'
+    '@radix-ui/react-slot': '^1.2.3'
     chokidar: ^4.0.0
     class-transformer: ^0.5.1
     class-validator: ^0.14.2
@@ -53,10 +55,16 @@ catalogs:
     rxjs: ^7.8.1
     source-map-support: ^0.5.21
     supertest: ^7.0.0
-    tailwindcss: ^4.1.12
     ts-jest: ^29.4.1
     ts-loader: ^9.5.1
     ts-node: ^10.9.2
     tsconfig-paths: ^4.2.0
     typescript: 5.3.3
     typescript-eslint: ^8.4.2
+    class-variance-authority: ^0.7.1
+    clsx: ^2.1.1
+    lucide-react: ^0.542.0
+    tailwindcss: ^4.1.12
+    tailwind-merge: ^3.3.1
+    tw-animate-css: ^1.3.8
+ 
