✨ feat: 新增两个icon库,支持tree-shaking,只打用到的icon

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,17 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@icons-pack/react-simple-icons": "catalog:",
     "@moge/configs": "workspace:*",
     "@moge/types": "workspace:*",
     "@radix-ui/react-label": "catalog:",
     "@radix-ui/react-slot": "catalog:",
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
-    "lucide-react": "catalog:",
     "next": "catalog:",
     "next-auth": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "lucide-react": "catalog:",
     "tailwind-merge": "catalog:"
   },
   "devDependencies": {
