--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,6 +10,7 @@ catalogs:
     '@commitlint/config-conventional': ^19.8.1
     '@eslint/eslintrc': ^3.1.0
     '@eslint/js': ^9.13.0
+    '@icons-pack/react-simple-icons': 13.7.0
     '@nestjs/cli': ^10.4.5
     '@nestjs/common': ^10.4.5
     '@nestjs/core': ^10.4.5
@@ -18,6 +19,8 @@ catalogs:
     '@nestjs/swagger': ^11.2.0
     '@nestjs/testing': ^10.4.5
     '@prisma/client': 6.15.0
+    '@radix-ui/react-label': ^2.1.7
+    '@radix-ui/react-slot': ^1.2.3
     '@tailwindcss/postcss': 4.1.12
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
@@ -28,11 +31,11 @@ catalogs:
     '@typescript-eslint/eslint-plugin': ^7.0.0
     '@typescript-eslint/parser': ^7.0.0
     '@typescript-eslint/typescript-estree': ^7.0.0
-    '@radix-ui/react-label': '^2.1.7'
-    '@radix-ui/react-slot': '^1.2.3'
     chokidar: ^4.0.0
     class-transformer: ^0.5.1
     class-validator: ^0.14.2
+    class-variance-authority: ^0.7.1
+    clsx: ^2.1.1
     concurrently: ^8.2.2
     dayjs: ^1.11.10
     eslint: ^9.34.0
@@ -44,6 +47,7 @@ catalogs:
     inquirer: ^9.2.0
     jest: ^29.7.0
     lint-staged: ^16.1.5
+    lucide-react: 0.542.0
     next: ^14.2.4
     next-auth: 4.24.11
     postcss: ^8.5.6
@@ -55,16 +59,12 @@ catalogs:
     rxjs: ^7.8.1
     source-map-support: ^0.5.21
     supertest: ^7.0.0
+    tailwind-merge: ^3.3.1
+    tailwindcss: ^4.1.12
     ts-jest: ^29.4.1
     ts-loader: ^9.5.1
     ts-node: ^10.9.2
     tsconfig-paths: ^4.2.0
+    tw-animate-css: ^1.3.8
     typescript: 5.3.3
     typescript-eslint: ^8.4.2
-    class-variance-authority: ^0.7.1
-    clsx: ^2.1.1
-    lucide-react: ^0.542.0
-    tailwindcss: ^4.1.12
-    tailwind-merge: ^3.3.1
-    tw-animate-css: ^1.3.8
- 
