✨ feat: 完善项目配置

--- a/.npmrc
+++ b/.npmrc
@@ -6,3 +6,9 @@ registry=https://registry.npmmirror.com
 # taobao ------- https://registry.npmmirror.com/
 # npmMirror ---- https://skimdb.npmjs.com/registry/
 # huawei ------- https://repo.huaweicloud.com/repository/npm/
+
+public-hoist-pattern[] = eslint
+public-hoist-pattern[] = prettier
+public-hoist-pattern[] = prettier-plugin-tailwindcss
+public-hoist-pattern[] = *postcss*
+public-hoist-pattern[] = @commitlint/*
