--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -52,6 +52,7 @@ catalogs:
     next-auth: 4.24.11
     postcss: ^8.5.6
     prettier: 3.6.2
+    prettier-plugin-tailwindcss: ^0.6.14
     prisma: 6.15.0
     react: ^18.3.1
     react-dom: ^18.3.1
