✨ feat: 增加注册页面,将登录注册页面公共部分进行抽离

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,15 +11,16 @@
     "@icons-pack/react-simple-icons": "catalog:",
     "@moge/configs": "workspace:*",
     "@moge/types": "workspace:*",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "catalog:",
     "@radix-ui/react-slot": "catalog:",
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
+    "lucide-react": "catalog:",
     "next": "catalog:",
     "next-auth": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "lucide-react": "catalog:",
     "tailwind-merge": "catalog:"
   },
   "devDependencies": {
