✨ feat: 增加store库zustand,增加主题换肤,语言切换按钮

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,7 +21,8 @@
     "next-auth": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
-    "tailwind-merge": "catalog:"
+    "tailwind-merge": "catalog:",
+    "zustand": "catalog:"
   },
   "devDependencies": {
     "@eslint/eslintrc": "catalog:",
