--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,14 +20,17 @@
     "lucide-react": "catalog:",
     "next": "catalog:",
     "next-auth": "catalog:",
+    "next-themes": "^0.4.6",
     "react": "catalog:",
     "react-dom": "catalog:",
+    "sonner": "^2.0.7",
     "tailwind-merge": "catalog:",
     "zustand": "catalog:"
   },
   "devDependencies": {
     "@eslint/eslintrc": "catalog:",
     "@eslint/js": "catalog:",
+    "@hookform/resolvers": "catalog:",
     "@tailwindcss/postcss": "catalog:",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
@@ -35,7 +38,9 @@
     "eslint": "catalog:",
     "eslint-config-next": "catalog:",
     "postcss": "catalog:",
+    "react-hook-form": "catalog:",
     "tailwindcss": "catalog:",
-    "tw-animate-css": "catalog:"
+    "tw-animate-css": "catalog:",
+    "zod": "catalog:"
   }
 }
