--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -10,6 +10,7 @@ catalogs:
     '@commitlint/config-conventional': ^19.8.1
     '@eslint/eslintrc': ^3.1.0
     '@eslint/js': ^9.13.0
+    '@hookform/resolvers': 5.2.1
     '@icons-pack/react-simple-icons': 13.7.0
     '@nestjs/cli': ^10.4.5
     '@nestjs/common': ^10.4.5
@@ -19,7 +20,7 @@ catalogs:
     '@nestjs/swagger': ^11.2.0
     '@nestjs/testing': ^10.4.5
     '@prisma/client': 6.15.0
-    '@radix-ui/react-label': ^2.1.7
+    '@radix-ui/react-label': 2.1.7
     '@radix-ui/react-slot': 1.2.3
     '@tailwindcss/postcss': 4.1.12
     '@types/express': ^5.0.0
@@ -56,6 +57,7 @@ catalogs:
     prisma: 6.15.0
     react: ^18.3.1
     react-dom: ^18.3.1
+    react-hook-form: 7.62.0
     reflect-metadata: ^0.2.2
     rxjs: ^7.8.1
     source-map-support: ^0.5.21
@@ -69,4 +71,5 @@ catalogs:
     tw-animate-css: ^1.3.8
     typescript: 5.3.3
     typescript-eslint: ^8.4.2
+    zod: 4.1.5
     zustand: 5.0.8
