--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,7 +14,9 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "catalog:",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "catalog:",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
     "lucide-react": "catalog:",
