--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -35,7 +35,7 @@ catalogs:
     chokidar: ^4.0.0
     class-transformer: ^0.5.1
     class-validator: ^0.14.2
-    class-variance-authority: ^0.7.1
+    class-variance-authority: 0.7.1
     clsx: ^2.1.1
     concurrently: ^8.2.2
     dayjs: ^1.11.10
