--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -22,6 +22,10 @@ catalogs:
     '@prisma/client': 6.15.0
     '@radix-ui/react-label': 2.1.7
     '@radix-ui/react-slot': 1.2.3
+    '@radix-ui/react-select': ^2.2.6
+    '@radix-ui/react-dialog': ^1.1.15
+    '@radix-ui/react-separator': ^1.1.7
+    '@radix-ui/react-tooltip': ^1.2.8
     '@tailwindcss/postcss': 4.1.12
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
@@ -51,6 +55,7 @@ catalogs:
     lucide-react: 0.542.0
     next: ^14.2.4
     next-auth: 4.24.11
+    next-themes: ^0.4.6
     postcss: ^8.5.6
     prettier: 3.6.2
     prettier-plugin-tailwindcss: ^0.6.14
@@ -62,6 +67,7 @@ catalogs:
     rxjs: ^7.8.1
     source-map-support: ^0.5.21
     supertest: ^7.0.0
+    sonner: ^2.0.7
     tailwind-merge: ^3.3.1
     tailwindcss: ^4.1.12
     ts-jest: ^29.4.1
