--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -20,13 +20,15 @@ catalogs:
     '@nestjs/swagger': ^11.2.0
     '@nestjs/testing': ^10.4.5
     '@prisma/client': 6.15.0
-    '@radix-ui/react-label': 2.1.7
-    '@radix-ui/react-slot': 1.2.3
-    '@radix-ui/react-select': ^2.2.6
     '@radix-ui/react-dialog': ^1.1.15
+    '@radix-ui/react-label': 2.1.7
+    '@radix-ui/react-select': ^2.2.6
     '@radix-ui/react-separator': ^1.1.7
+    '@radix-ui/react-slot': 1.2.3
     '@radix-ui/react-tooltip': ^1.2.8
     '@tailwindcss/postcss': 4.1.12
+    '@trpc/client': 11.5.1
+    '@trpc/server': 11.5.1
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
     '@types/node': 18.18.0
@@ -65,9 +67,9 @@ catalogs:
     react-hook-form: 7.62.0
     reflect-metadata: ^0.2.2
     rxjs: ^7.8.1
+    sonner: ^2.0.7
     source-map-support: ^0.5.21
     supertest: ^7.0.0
-    sonner: ^2.0.7
     tailwind-merge: ^3.3.1
     tailwindcss: ^4.1.12
     ts-jest: ^29.4.1
