✨ feat: 项目引进trpc扩展包

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@hookform/resolvers": "catalog:",
     "@icons-pack/react-simple-icons": "catalog:",
     "@prisma/client": "catalog:",
+    "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
+    "@trpc/react-query": "catalog:",
     "@trpc/server": "catalog:",
     "lucide-react": "catalog:",
     "next-auth": "catalog:",
