--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,7 +17,9 @@
     "@radix-ui/react-separator": "catalog:",
     "@radix-ui/react-slot": "catalog:",
     "@radix-ui/react-tooltip": "catalog:",
+    "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
+    "@trpc/react-query": "catalog:",
     "class-variance-authority": "catalog:",
     "clsx": "catalog:",
     "lucide-react": "catalog:",
