--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -27,7 +27,9 @@ catalogs:
     '@radix-ui/react-slot': 1.2.3
     '@radix-ui/react-tooltip': ^1.2.8
     '@tailwindcss/postcss': 4.1.12
+    '@tanstack/react-query': 5.87.1
     '@trpc/client': 11.5.1
+    '@trpc/react-query': 11.5.1
     '@trpc/server': 11.5.1
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
