✨ feat: 解决依赖unmet peer问题

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
+# 国内镜像
 registry=https://registry.npmmirror.com
 # npm ---------- https://registry.npmjs.org/
 # yarn --------- https://registry.yarnpkg.com/
@@ -7,8 +8,18 @@ registry=https://registry.npmmirror.com
 # npmMirror ---- https://skimdb.npmjs.com/registry/
 # huawei ------- https://repo.huaweicloud.com/repository/npm/
 
-public-hoist-pattern[] = eslint
-public-hoist-pattern[] = prettier
-public-hoist-pattern[] = prettier-plugin-tailwindcss
-public-hoist-pattern[] = *postcss*
-public-hoist-pattern[] = @commitlint/*
+# 严格检查 peer 依赖，缺就提示，不自动装
+strict-peer-dependencies=true
+auto-install-peers=false
+
+# 严格隔离，避免幽灵依赖
+node-linker=isolated
+
+# 共享锁文件
+shared-workspace-lockfile=true
+
+# 只把真正的全局工具提升
+public-hoist-pattern[]=eslint
+public-hoist-pattern[]=prettier
+public-hoist-pattern[]=prettier-plugin-tailwindcss
+public-hoist-pattern[]=postcss
