✨ feat: 增加共享包trpc

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "@moge/root",
   "version": "1.0.0",
   "scripts": {
-    "lint": "pnpm --filter  @moge/configs lint",
+    "lint": "pnpm --filter @moge/configs lint",
     "dev": "node scripts/dev-selector.js",
-    "dev:shared": "pnpm --filter \"@moge/{types,configs}\" dev",
+    "dev:shared": "pnpm --filter \"@moge/{types,configs,trpc}\" dev",
     "dev:apps": "concurrently \"pnpm dev:backend\" \"pnpm dev:frontend\"",
     "dev:frontend": "pnpm --filter @moge/frontend dev",
     "dev:backend": "pnpm --filter @moge/backend dev",
     "build": "concurrently \"pnpm build:shared\" \"pnpm build:apps\"",
-    "build:shared": "pnpm --filter \"@moge/{types,configs}\" build",
+    "build:shared": "pnpm --filter \"@moge/{types,configs,trpc}\" build",
     "build:apps": "concurrently \"pnpm build:backend\" \"pnpm build:frontend\"",
     "build:frontend": "pnpm --filter @moge/frontend build",
     "build:backend": "pnpm --filter @moge/backend build",
