✨ feat: 子包引用共享包trpc

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@icons-pack/react-simple-icons": "catalog:",
     "@moge/configs": "workspace:*",
+    "@moge/trpc": "workspace:*",
     "@moge/types": "workspace:*",
     "@radix-ui/react-dialog": "catalog:",
     "@radix-ui/react-label": "catalog:",
