--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@moge/configs": "workspace:*",
+    "@moge/trpc": "workspace:*",
     "@moge/types": "workspace:*",
     "@nestjs/common": "catalog:",
     "@nestjs/core": "catalog:",
