--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,7 +25,8 @@
     "@prisma/client": "catalog:",
     "@trpc/server": "catalog:",
     "reflect-metadata": "catalog:",
-    "rxjs": "catalog:"
+    "rxjs": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@eslint/eslintrc": "catalog:",
