--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "scripts": {
     "lint": "pnpm --filter @moge/configs lint",
+    "typecheck": "pnpm -r run type-check",
+    "test": "pnpm -r run test",
     "dev": "node scripts/dev-selector.js",
     "dev:shared": "pnpm --filter \"@moge/{types,configs,trpc}\" dev",
     "dev:apps": "concurrently \"pnpm dev:backend\" \"pnpm dev:frontend\"",
     "dev:frontend": "pnpm --filter @moge/frontend dev",
     "dev:backend": "pnpm --filter @moge/backend dev",
-    "build": "concurrently \"pnpm build:shared\" \"pnpm build:apps\"",
+    "build": "pnpm build:shared && pnpm build:apps",
     "build:shared": "pnpm --filter \"@moge/{types,configs,trpc}\" build",
     "build:apps": "concurrently \"pnpm build:backend\" \"pnpm build:frontend\"",
     "build:frontend": "pnpm --filter @moge/frontend build",
     "build:backend": "pnpm --filter @moge/backend build",
     "clean": "pnpm -r run clean",
+    "reset": "pnpm clean && rm -rf node_modules && rm -rf **/node_modules && pnpm install",
     "prepare": "husky",
     "start:frontend": "pnpm --filter @moge/frontend start",
     "start:backend": "pnpm --filter @moge/backend start:prod"
