--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next dist"
   },
   "dependencies": {
     "@hookform/resolvers": "catalog:",
