--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -15,6 +15,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
+    "composite": true,
     "plugins": [{ "name": "next" }],
     // 路径映射，用于简化模块导入
     "paths": {
