--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,10 +4,21 @@
   "description": "Shared types for Next.js and NestJS",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc --project tsconfig.json",
     "dev": "tsc --watch --project tsconfig.json",
-    "type-check": "tsc --noEmit --project tsconfig.json"
+    "type-check": "tsc --noEmit --project tsconfig.json",
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
     "typescript": "catalog:"
