--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     // 模块解析
     "baseUrl": ".", // 基础路径，用于解析非相对模块名
     "paths": {
-      "@moge/*": ["../*"] // 路径映射，简化@moge的导入
+      "@moge/*": ["packages/*", "apps/*"] // 路径映射，简化@moge的导入
     },
 
     // 类型检查与声明
@@ -45,7 +45,10 @@
   // 项目引用配置（monorepo支持）
   "references": [
     { "path": "./packages/configs" }, // 引用配置包
-    { "path": "./packages/types" } // 引用类型定义包
+    { "path": "./packages/types" }, // 引用类型定义包
+    { "path": "./packages/trpc" }, // 引用tRPC包
+    { "path": "./apps/frontend" }, // 引用前端应用
+    { "path": "./apps/backend" } // 引用后端应用
   ],
 
   // 包含与排除规则（子项目应根据需要扩展）
