--- a/packages/configs/tsconfig.json
+++ b/packages/configs/tsconfig.json
@@ -14,5 +14,5 @@
     "isolatedModules": true,
     "lib": ["ES2022", "dom", "decorators"]
   },
-  "include": ["src/**/*", "*.mjs", "*.ts"]
+  "include": ["*.mjs", "*.ts"]
 }
