--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,6 +14,7 @@ catalogs:
     '@icons-pack/react-simple-icons': 13.7.0
     '@nestjs/cli': ^10.4.5
     '@nestjs/common': ^10.4.5
+    '@nestjs/config': ^4.0.2
     '@nestjs/core': ^10.4.5
     '@nestjs/platform-express': ^10.4.5
     '@nestjs/schematics': ^10.0.0
