✨ feat: 增加trpc的登录注册接口

--- a/apps/backend/.env.development
+++ b/apps/backend/.env.development
@@ -7,6 +7,9 @@ PORT=8888
 # 环境
 NODE_ENV=development
 
+# JWT 秘钥
+JWT_SECRET="pang-nm-de-hu-lao-zi-de-name-is-gang-tian-wu!!!"
+
 # 数据库配置
 DATABASE_TYPE=postgresql
 DATABASE_HOST=localhost
