--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,13 +2,13 @@
   "name": "@moge/types",
   "version": "1.0.0",
   "description": "Shared types for Next.js and NestJS",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
+  "types": "./src/index.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
-      "import": "./dist/index.js"
+      "types": "./src/index.ts",
+      "import": "./src/index.ts",
+      "require": "./src/index.ts"
     }
   },
   "files": [
