--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -31,8 +31,10 @@ catalogs:
     '@trpc/client': 11.5.1
     '@trpc/react-query': 11.5.1
     '@trpc/server': 11.5.1
+    '@types/bcryptjs': ^2.4.6
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
+    '@types/jsonwebtoken': ^9.0.3
     '@types/node': 18.18.0
     '@types/react': ^19
     '@types/react-dom': ^19
@@ -40,6 +42,7 @@ catalogs:
     '@typescript-eslint/eslint-plugin': ^8.0.0
     '@typescript-eslint/parser': ^8.0.0
     '@typescript-eslint/typescript-estree': ^8.0.0
+    bcryptjs: ^2.4.3
     chokidar: ^4.0.0
     class-transformer: ^0.5.1
     class-validator: ^0.14.2
@@ -55,6 +58,7 @@ catalogs:
     husky: ^9.1.7
     inquirer: ^9.2.0
     jest: ^29.7.0
+    jsonwebtoken: ^9.0.2
     lint-staged: ^16.1.5
     lucide-react: 0.542.0
     next: ^14.2.4
@@ -82,3 +86,6 @@ catalogs:
     typescript-eslint: ^8.4.2
     zod: 4.1.7
     zustand: 5.0.8
+
+ignoredBuiltDependencies:
+  - bcrypt
