--- a/apps/frontend/.env.development
+++ b/apps/frontend/.env.development
@@ -4,3 +4,6 @@ GITLAB_CLIENT_SECRET=gloas-fce972c3771b8c07e8636a0cf7563c63b12aa0ac2a4bd00d2e88d
 
 # 接口基础路径
 NEXT_APP_BASE_URL=/api
+
+# 后端 API 地址
+NEXT_APP_API_URL=http://localhost:8888
