✨ feat: 登录注册交给NextAuth做中间工作

--- a/apps/frontend/.env.development
+++ b/apps/frontend/.env.development
@@ -7,3 +7,6 @@ NEXT_APP_BASE_URL=/api
 
 # 后端 API 地址
 NEXT_APP_API_URL=http://localhost:8888
+
+# NextAuth.js 用于加密 JWT 的密钥, 在生产环境中必须是一个安全的随机字符串
+NEXTAUTH_SECRET="pang-nm-de-hu-lao-zi-de-name-is-gang-tian-wu!next!auth!"
