--- a/apps/frontend/.env.development
+++ b/apps/frontend/.env.development
@@ -10,3 +10,6 @@ NEXT_APP_API_URL=http://localhost:8888
 
 # NextAuth.js 用于加密 JWT 的密钥, 在生产环境中必须是一个安全的随机字符串
 NEXTAUTH_SECRET="pang-nm-de-hu-lao-zi-de-name-is-gang-tian-wu!next!auth!"
+
+# NextAuth.js 第三方登录回调地址
+NEXTAUTH_URL=http://localhost:3000
