--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,13 +2,13 @@
   "name": "@moge/types",
   "version": "1.0.0",
   "description": "Shared types for Next.js and NestJS",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./src/index.ts",
-      "import": "./src/index.ts",
-      "require": "./src/index.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
     }
   },
   "files": [
@@ -24,6 +24,7 @@
     "typescript": "catalog:"
   },
   "dependencies": {
-    "zod": "catalog:"
+    "zod": "catalog:",
+    "@trpc/server": "catalog:"
   }
 }
