--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs", // 模块系统格式
-    "declaration": true, // 生成类型声明文件(.d.ts)
-    "outDir": "./dist", // 编译输出目录
-    "composite": true, // 启用复合项目模式(monorepo支持)
-    "rootDir": "./src", // 源文件根目录
-    "declarationMap": true // 生成声明文件的源映射
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "declaration": true,
+    "outDir": "./dist",
+    "composite": true,
+    "rootDir": "./src",
+    "declarationMap": true
   },
-  "include": ["src/**/*"], // 需要编译的源文件
-  "exclude": ["node_modules", "dist"] // 排除的目录
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
