✨ feat: 对types共享包的trpc逻辑进一步拆分,各管各的

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -24,7 +24,6 @@
     "typescript": "catalog:"
   },
   "dependencies": {
-    "zod": "catalog:",
-    "@trpc/server": "catalog:"
+    "zod": "catalog:"
   }
 }
