✨ feat: 解决根目录pnpm无法识别语法问题

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "typecheck": "pnpm -r run type-check",
     "test": "pnpm -r run test",
     "dev": "node scripts/dev-selector.js",
-    "dev:shared": "pnpm --filter \"@moge/{types,configs}\" dev",
+    "dev:shared": "pnpm -r --filter='./packages/**' dev",
     "dev:apps": "concurrently \"pnpm dev:backend\" \"pnpm dev:frontend\"",
     "dev:frontend": "pnpm --filter @moge/frontend dev",
     "dev:backend": "pnpm --filter @moge/backend dev",
     "build": "pnpm build:shared && pnpm build:apps",
-    "build:shared": "pnpm --filter \"@moge/{types,configs}\" build",
+    "build:shared": "pnpm -r --filter='./packages/**' run build",
     "build:apps": "concurrently \"pnpm build:backend\" \"pnpm build:frontend\"",
     "build:frontend": "pnpm --filter @moge/frontend build",
     "build:backend": "pnpm --filter @moge/backend build",
