--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -32,6 +32,7 @@
     "@trpc/server": "catalog:",
     "bcryptjs": "catalog:",
     "jsonwebtoken": "catalog:",
+    "langchain": "catalog:",
     "reflect-metadata": "catalog:",
     "rxjs": "catalog:",
     "zod": "catalog:"
@@ -42,12 +43,12 @@
     "@nestjs/cli": "catalog:",
     "@nestjs/schematics": "catalog:",
     "@nestjs/testing": "catalog:",
+    "@types/bcryptjs": "catalog:",
     "@types/express": "catalog:",
     "@types/jest": "catalog:",
+    "@types/jsonwebtoken": "catalog:",
     "@types/node": "catalog:",
     "@types/supertest": "catalog:",
-    "@types/bcryptjs": "catalog:",
-    "@types/jsonwebtoken": "catalog:",
     "class-transformer": "catalog:",
     "class-validator": "catalog:",
     "eslint": "catalog:",
