--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -59,6 +59,7 @@ catalogs:
     inquirer: ^9.2.0
     jest: ^29.7.0
     jsonwebtoken: ^9.0.2
+    langchain: 0.3.34
     lint-staged: ^16.1.5
     lucide-react: 0.542.0
     next: ^14.2.4
