--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -59,7 +59,8 @@ catalogs:
     inquirer: ^9.2.0
     jest: ^29.7.0
     jsonwebtoken: ^9.0.2
-    langchain: 0.3.34
+    '@langchain/core': 0.3.76
+    '@langchain/openai': 0.6.12
     lint-staged: ^16.1.5
     lucide-react: 0.542.0
     next: ^14.2.4
@@ -85,7 +86,7 @@ catalogs:
     tw-animate-css: ^1.3.8
     typescript: 5.7.2
     typescript-eslint: ^8.4.2
-    zod: 4.1.5
+    zod: ^3.23.8
     zustand: 5.0.8
 
 ignoredBuiltDependencies:
