--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@moge/root",
   "version": "1.0.0",
   "scripts": {
-    "lint": "pnpm --filter @moge/configs lint",
+    "lint": "eslint --config packages/configs/eslint.config.mjs \"{apps,packages}/**/*.{ts,tsx,js,jsx}\"",
+    "lint:fix": "eslint --config packages/configs/eslint.config.mjs \"{apps,packages}/**/*.{ts,tsx,js,jsx}\" --fix",
     "typecheck": "pnpm -r run type-check",
     "test": "pnpm -r run test",
     "dev": "node scripts/dev-selector.js",
