--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -27,10 +27,6 @@ catalogs:
     '@radix-ui/react-slot': 1.2.3
     '@radix-ui/react-tooltip': ^1.2.8
     '@tailwindcss/postcss': 4.1.12
-    '@tanstack/react-query': 5.87.1
-    '@trpc/client': 11.5.1
-    '@trpc/react-query': 11.5.1
-    '@trpc/server': 11.5.1
     '@types/bcryptjs': ^2.4.6
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
@@ -42,6 +38,9 @@ catalogs:
     '@typescript-eslint/eslint-plugin': ^8.0.0
     '@typescript-eslint/parser': ^8.0.0
     '@typescript-eslint/typescript-estree': ^8.0.0
+    '@nestjs/swagger': ^7.4.2
+    swagger-ui-express: ^4.6.3
+    '@types/swagger-ui-express': ^4.1.6
     bcryptjs: ^2.4.3
     chokidar: ^4.0.0
     class-transformer: ^0.5.1
