--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@moge/root",
   "version": "1.0.0",
   "scripts": {
-    "lint": "git diff --cached --name-only --diff-filter=ACMR | grep -E '\\.(ts|tsx|js|jsx)$' | xargs -r eslint --config packages/configs/eslint.config.mjs",
-    "lint:fix": "eslint --config packages/configs/eslint.config.mjs --fix --cache \"{apps,packages}/**/*.{ts,tsx,js,jsx}\"",
+    "lint": "git diff --cached --name-only --diff-filter=ACMR | grep -E '\\.(ts|tsx|js|jsx)$' | xargs -r eslint --config eslint.config.mjs",
+    "lint:fix": "eslint --config eslint.config.mjs --fix --cache \"{apps,packages}/**/*.{ts,tsx,js,jsx}\"",
     "typecheck": "pnpm -r run type-check",
     "test": "pnpm -r run test",
     "dev": "node scripts/dev-selector.js",
@@ -46,7 +46,7 @@
   },
   "lint-staged": {
     "{apps,packages}/**/*.{ts,tsx,js,jsx}": [
-      "eslint --config packages/configs/eslint.config.mjs --fix",
+      "eslint --config eslint.config.mjs --fix",
       "prettier --write"
     ],
     "*.{json,md}": [
