✨ feat: 目录结构优化

--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
     "@changesets/cli": "catalog:",
     "@commitlint/cli": "catalog:",
     "@commitlint/config-conventional": "catalog:",
+    "@eslint/js": "catalog:",
+    "@typescript-eslint/eslint-plugin": "catalog:",
+    "@typescript-eslint/parser": "catalog:",
     "concurrently": "catalog:",
     "eslint": "catalog:",
     "eslint-config-prettier": "catalog:",
     "eslint-plugin-prettier": "catalog:",
+    "globals": "catalog:",
     "husky": "catalog:",
     "inquirer": "catalog:",
     "lint-staged": "catalog:",
