--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,12 +12,15 @@ catalogs:
     '@eslint/js': ^9.13.0
     '@hookform/resolvers': 5.2.1
     '@icons-pack/react-simple-icons': 13.7.0
+    '@langchain/core': 0.3.76
+    '@langchain/openai': 0.6.12
     '@nestjs/cli': ^10.4.5
     '@nestjs/common': ^10.4.5
     '@nestjs/config': ^4.0.2
     '@nestjs/core': ^10.4.5
     '@nestjs/platform-express': ^10.4.5
     '@nestjs/schematics': ^10.0.0
+    '@nestjs/swagger': ^7.4.2
     '@nestjs/testing': ^10.4.5
     '@prisma/client': 6.15.0
     '@radix-ui/react-dialog': ^1.1.15
@@ -27,6 +30,7 @@ catalogs:
     '@radix-ui/react-slot': 1.2.3
     '@radix-ui/react-tooltip': ^1.2.8
     '@tailwindcss/postcss': 4.1.12
+    '@tailwindcss/typography': ^0.5.16
     '@types/bcryptjs': ^2.4.6
     '@types/express': ^5.0.0
     '@types/jest': ^29.5.12
@@ -35,12 +39,10 @@ catalogs:
     '@types/react': ^19
     '@types/react-dom': ^19
     '@types/supertest': ^6.0.2
+    '@types/swagger-ui-express': ^4.1.6
     '@typescript-eslint/eslint-plugin': ^8.0.0
     '@typescript-eslint/parser': ^8.0.0
     '@typescript-eslint/typescript-estree': ^8.0.0
-    '@nestjs/swagger': ^7.4.2
-    swagger-ui-express: ^4.6.3
-    '@types/swagger-ui-express': ^4.1.6
     bcryptjs: ^2.4.3
     chokidar: ^4.0.0
     class-transformer: ^0.5.1
@@ -58,8 +60,6 @@ catalogs:
     inquirer: ^9.2.0
     jest: ^29.7.0
     jsonwebtoken: ^9.0.2
-    '@langchain/core': 0.3.76
-    '@langchain/openai': 0.6.12
     lint-staged: ^16.1.5
     lucide-react: 0.542.0
     next: ^14.2.4
@@ -72,11 +72,13 @@ catalogs:
     react: ^18.3.1
     react-dom: ^18.3.1
     react-hook-form: 7.62.0
+    react-markdown: 10.1.0
     reflect-metadata: ^0.2.2
     rxjs: ^7.8.1
     sonner: ^2.0.7
     source-map-support: ^0.5.21
     supertest: ^7.0.0
+    swagger-ui-express: ^4.6.3
     tailwind-merge: ^3.3.1
     tailwindcss: ^4.1.12
     ts-jest: ^29.4.1
